@@ -1,5 +1,5 @@
 @c This is part of the AUCTeX Manual.
-@c Copyright (C) 2004-2024 Free Software Foundation, Inc.
+@c Copyright (C) 2004-2025 Free Software Foundation, Inc.
 @c See the file auctex.texi for copying conditions.
 
 @c We should switch to sectioning commands instead of items when this
@@ -111,7 +111,7 @@ remaining under @file{~/.emacs.d/elpa/}.
 @item
 What versions of Emacs are supported?
 
-@AUCTeX{} was tested with @w{GNU Emacs 27.1}.  Older versions may work but
+@AUCTeX{} was tested with @w{GNU Emacs 28.1}.  Older versions may work but
 are unsupported.
 
 @item
